Instructor checklist rework