@@ -1,7 +1,10 @@
 package de.tum.cit.aet.artemis.hyperion.service;
 
+import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -10,17 +13,22 @@ import org.springframework.context.annotation.Conditional;
 import org.springframework.context.annotation.Lazy;
 import org.springframework.stereotype.Service;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.ObjectMapper;
+
+import de.tum.cit.aet.artemis.atlas.domain.competency.KnowledgeArea;
+import de.tum.cit.aet.artemis.atlas.domain.competency.StandardizedCompetency;
+import de.tum.cit.aet.artemis.atlas.service.competency.StandardizedCompetencyService;
 import de.tum.cit.aet.artemis.hyperion.config.HyperionEnabled;
-import de.tum.cit.aet.artemis.hyperion.domain.ArtifactType;
-import de.tum.cit.aet.artemis.hyperion.domain.ConsistencyIssueCategory;
-import de.tum.cit.aet.artemis.hyperion.domain.Severity;
-import de.tum.cit.aet.artemis.hyperion.dto.ArtifactLocationDTO;
+import de.tum.cit.aet.artemis.hyperion.dto.BloomRadarDTO;
 import de.tum.cit.aet.artemis.hyperion.dto.ChecklistAnalysisRequestDTO;
 import de.tum.cit.aet.artemis.hyperion.dto.ChecklistAnalysisResponseDTO;
-import de.tum.cit.aet.artemis.hyperion.dto.ConsistencyIssueDTO;
 import de.tum.cit.aet.artemis.hyperion.dto.DifficultyAssessmentDTO;
-import de.tum.cit.aet.artemis.hyperion.dto.LearningGoalItemDTO;
+import de.tum.cit.aet.artemis.hyperion.dto.InferredCompetencyDTO;
+import de.tum.cit.aet.artemis.hyperion.dto.QualityIssueDTO;
+import de.tum.cit.aet.artemis.hyperion.dto.QualityIssueLocationDTO;
 import de.tum.cit.aet.artemis.programming.domain.ProgrammingExercise;
+import io.micrometer.common.KeyValue;
 import io.micrometer.observation.Observation;
 import io.micrometer.observation.ObservationRegistry;
 import io.micrometer.observation.annotation.Observed;
@@ -28,7 +36,10 @@ import reactor.core.publisher.Mono;
 import reactor.core.scheduler.Schedulers;
 
 /**
- * Service for analyzing the checklist for the given programming exercise.
+ * Service for analyzing the instructor checklist for programming exercises.
+ * Uses the standardized competency catalog to infer competencies, assess
+ * difficulty,
+ * and identify quality issues in the problem statement.
  */
 @Service
 @Lazy
@@ -43,74 +54,142 @@ public class HyperionChecklistService {
 
     private static final String LF_SPAN_NAME_KEY = "lf.span.name";
 
+    private static final ObjectMapper objectMapper = new ObjectMapper();
+
     private final ChatClient chatClient;
 
     private final HyperionPromptTemplateService templates;
 
     private final ObservationRegistry observationRegistry;
 
-    public HyperionChecklistService(ChatClient chatClient, HyperionPromptTemplateService templates, ObservationRegistry observationRegistry) {
+    private final StandardizedCompetencyService standardizedCompetencyService;
+
+    public HyperionChecklistService(ChatClient chatClient, HyperionPromptTemplateService templates, ObservationRegistry observationRegistry,
+            StandardizedCompetencyService standardizedCompetencyService) {
         this.chatClient = chatClient;
         this.templates = templates;
         this.observationRegistry = observationRegistry;
+        this.standardizedCompetencyService = standardizedCompetencyService;
     }
 
     /**
      * Analyzes the checklist for the given programming exercise.
-     *
-     *
+     * Runs three concurrent analyses: competency inference, difficulty assessment,
+     * and quality check.
      *
      * @param exercise The programming exercise to analyze
-     * @param request  The request containing the problem statement and other details
-     * @return The analysis response containing learning goals, difficulty, and quality issues
+     * @param request  The request containing the problem statement and other
+     *                     details
+     * @return The analysis response containing inferred competencies, bloom radar,
+     *         difficulty, and quality issues
      */
     @Observed(name = "hyperion.checklist", contextualName = "checklist analysis", lowCardinalityKeyValues = { AI_SPAN_KEY, AI_SPAN_VALUE })
     public ChecklistAnalysisResponseDTO analyzeChecklist(ProgrammingExercise exercise, ChecklistAnalysisRequestDTO request) {
         log.info("Performing checklist analysis for exercise {}", exercise.getId());
 
-        String difficulty = request.existingDifficulty() != null ? request.existingDifficulty() : (exercise.getDifficulty() != null ? exercise.getDifficulty().name() : "UNKNOWN");
-        String learningGoals = request.existingLearningGoals() != null ? String.join(", ", request.existingLearningGoals()) : "None declared";
-        String problemStatement = request.problemStatement() != null ? request.problemStatement() : "";
+        String problemStatement = request.problemStatementMarkdown() != null ? request.problemStatementMarkdown() : "";
+        String declaredDifficulty = request.declaredDifficulty() != null ? request.declaredDifficulty()
+                : (exercise.getDifficulty() != null ? exercise.getDifficulty().name() : null);
+        String language = request.language() != null ? request.language() : (exercise.getProgrammingLanguage() != null ? exercise.getProgrammingLanguage().name() : "JAVA");
 
-        var input = Map.of("problem_statement", problemStatement, "declared_difficulty", difficulty, "existing_learning_goals", learningGoals);
+        // Fetch and serialize the competency catalog
+        String catalogJson = serializeCompetencyCatalog();
+
+        var input = Map.of("problem_statement", problemStatement, "declared_difficulty", declaredDifficulty != null ? declaredDifficulty : "NOT_DECLARED", "language", language,
+                "competency_catalog", catalogJson);
 
         Observation parentObs = observationRegistry.getCurrentObservation();
 
-        var learningGoalsMono = Mono.fromCallable(() -> runLearningGoalsAnalysis(input, parentObs)).subscribeOn(Schedulers.boundedElastic()).onErrorReturn(List.of());
-        var difficultyMono = Mono.fromCallable(() -> runDifficultyAnalysis(input, parentObs, difficulty)).subscribeOn(Schedulers.boundedElastic())
-                .onErrorReturn(new DifficultyAssessmentDTO("UNKNOWN", "Failed to analyze difficulty", false));
+        // Run three analyses concurrently
+        var competenciesMono = Mono.fromCallable(() -> runCompetencyInference(input, parentObs)).subscribeOn(Schedulers.boundedElastic()).onErrorReturn(List.of());
+
+        var difficultyMono = Mono.fromCallable(() -> runDifficultyAnalysis(input, parentObs, declaredDifficulty)).subscribeOn(Schedulers.boundedElastic())
+                .onErrorReturn(DifficultyAssessmentDTO.unknown("Analysis failed"));
+
         var qualityMono = Mono.fromCallable(() -> runQualityAnalysis(input, parentObs)).subscribeOn(Schedulers.boundedElastic()).onErrorReturn(List.of());
 
-        var resultTuple = Mono.zip(learningGoalsMono, difficultyMono, qualityMono).block();
+        var resultTuple = Mono.zip(competenciesMono, difficultyMono, qualityMono).block();
 
         if (resultTuple == null) {
-            return new ChecklistAnalysisResponseDTO(List.of(), null, List.of());
+            return ChecklistAnalysisResponseDTO.empty();
         }
 
-        return new ChecklistAnalysisResponseDTO(resultTuple.getT1(), resultTuple.getT2(), resultTuple.getT3());
+        List<InferredCompetencyDTO> competencies = resultTuple.getT1();
+        BloomRadarDTO bloomRadar = computeBloomRadar(competencies);
+
+        return new ChecklistAnalysisResponseDTO(competencies, bloomRadar, resultTuple.getT2(), resultTuple.getT3());
     }
 
-    private List<LearningGoalItemDTO> runLearningGoalsAnalysis(Map<String, String> input, Observation parentObs) {
-        var child = Observation.createNotStarted("hyperion.checklist.learning_goals", observationRegistry).contextualName("learning goals check")
-                .lowCardinalityKeyValue(io.micrometer.common.KeyValue.of(AI_SPAN_KEY, AI_SPAN_VALUE))
-                .highCardinalityKeyValue(io.micrometer.common.KeyValue.of(LF_SPAN_NAME_KEY, "learning goals check")).parentObservation(parentObs).start();
+    /**
+     * Serializes the standardized competency catalog to a condensed JSON format for
+     * the prompt.
+     */
+    private String serializeCompetencyCatalog() {
+        try {
+            List<KnowledgeArea> knowledgeAreas = standardizedCompetencyService.getAllForTreeView();
+            List<Map<String, Object>> catalog = new ArrayList<>();
 
-        var resourcePath = "/prompts/hyperion/checklist_learning_goals.st";
+            for (KnowledgeArea ka : knowledgeAreas) {
+                serializeKnowledgeArea(ka, catalog);
+            }
+
+            return objectMapper.writeValueAsString(catalog);
+        }
+        catch (JsonProcessingException e) {
+            log.error("Failed to serialize competency catalog", e);
+            return "[]";
+        }
+    }
+
+    private void serializeKnowledgeArea(KnowledgeArea ka, List<Map<String, Object>> catalog) {
+        if (ka.getCompetencies() != null && !ka.getCompetencies().isEmpty()) {
+            for (StandardizedCompetency comp : ka.getCompetencies()) {
+                Map<String, Object> entry = new HashMap<>();
+                entry.put("knowledgeAreaShortTitle", ka.getShortTitle());
+                entry.put("knowledgeAreaTitle", ka.getTitle());
+                entry.put("competencyTitle", comp.getTitle());
+                entry.put("competencyDescription", comp.getDescription());
+                entry.put("taxonomy", comp.getTaxonomy() != null ? comp.getTaxonomy().name() : null);
+                entry.put("version", comp.getVersion());
+                entry.put("sourceId", comp.getSource() != null ? comp.getSource().getId() : null);
+                catalog.add(entry);
+            }
+        }
+
+        // Recursively process children
+        if (ka.getChildren() != null) {
+            for (KnowledgeArea child : ka.getChildren()) {
+                serializeKnowledgeArea(child, catalog);
+            }
+        }
+    }
+
+    /**
+     * Runs competency inference using the standardized catalog.
+     */
+    private List<InferredCompetencyDTO> runCompetencyInference(Map<String, String> input, Observation parentObs) {
+        var child = Observation.createNotStarted("hyperion.checklist.competencies", observationRegistry).contextualName("competency inference")
+                .lowCardinalityKeyValue(KeyValue.of(AI_SPAN_KEY, AI_SPAN_VALUE)).highCardinalityKeyValue(KeyValue.of(LF_SPAN_NAME_KEY, "competency inference"))
+                .parentObservation(parentObs).start();
+
+        var resourcePath = "/prompts/hyperion/checklist_competencies.st";
         String renderedPrompt = templates.render(resourcePath, input);
 
         try (Observation.Scope scope = child.openScope()) {
             var response = chatClient.prompt().system("You are an expert in computer science education and curriculum design. Return only JSON matching the schema.")
-                    .user(renderedPrompt).call().responseEntity(StructuredOutputSchema.LearningGoalsResponse.class);
+                    .user(renderedPrompt).call().responseEntity(StructuredOutputSchema.CompetenciesResponse.class);
 
             var entity = response.entity();
-            if (entity == null || entity.goals() == null)
+            if (entity == null || entity.competencies() == null) {
                 return List.of();
+            }
 
-            return entity.goals().stream().map(g -> new LearningGoalItemDTO(g.skill(), g.taxonomyLevel(), g.confidence(), g.explanation())).toList();
+            return entity.competencies().stream().map(c -> new InferredCompetencyDTO(c.knowledgeAreaShortTitle(), c.competencyTitle(), c.competencyVersion(), c.catalogSourceId(),
+                    c.taxonomyLevel(), c.confidence(), c.rank(), c.evidence(), c.whyThisMatches(), c.isLikelyPrimary())).toList();
         }
         catch (Exception e) {
             child.error(e);
-            log.warn("Failed to analyze learning goals", e);
+            log.warn("Failed to analyze competencies", e);
             return List.of();
         }
         finally {
@@ -118,10 +197,41 @@ public class HyperionChecklistService {
         }
     }
 
+    /**
+     * Computes the Bloom radar distribution from inferred competencies.
+     */
+    private BloomRadarDTO computeBloomRadar(List<InferredCompetencyDTO> competencies) {
+        if (competencies == null || competencies.isEmpty()) {
+            return BloomRadarDTO.empty();
+        }
+
+        // Aggregate confidence-weighted taxonomy levels
+        Map<String, Double> taxonomyWeights = new HashMap<>();
+        double totalWeight = 0.0;
+
+        for (InferredCompetencyDTO comp : competencies) {
+            String level = comp.taxonomyLevel();
+            double confidence = comp.confidence() != null ? comp.confidence() : 0.5;
+
+            taxonomyWeights.merge(level, confidence, Double::sum);
+            totalWeight += confidence;
+        }
+
+        // Normalize to sum to 1.0
+        final double finalTotal = totalWeight > 0 ? totalWeight : 1.0;
+
+        return new BloomRadarDTO(taxonomyWeights.getOrDefault("REMEMBER", 0.0) / finalTotal, taxonomyWeights.getOrDefault("UNDERSTAND", 0.0) / finalTotal,
+                taxonomyWeights.getOrDefault("APPLY", 0.0) / finalTotal, taxonomyWeights.getOrDefault("ANALYZE", 0.0) / finalTotal,
+                taxonomyWeights.getOrDefault("EVALUATE", 0.0) / finalTotal, taxonomyWeights.getOrDefault("CREATE", 0.0) / finalTotal);
+    }
+
+    /**
+     * Runs difficulty analysis.
+     */
     private DifficultyAssessmentDTO runDifficultyAnalysis(Map<String, String> input, Observation parentObs, String declaredDifficulty) {
         var child = Observation.createNotStarted("hyperion.checklist.difficulty", observationRegistry).contextualName("difficulty check")
-                .lowCardinalityKeyValue(io.micrometer.common.KeyValue.of(AI_SPAN_KEY, AI_SPAN_VALUE))
-                .highCardinalityKeyValue(io.micrometer.common.KeyValue.of(LF_SPAN_NAME_KEY, "difficulty check")).parentObservation(parentObs).start();
+                .lowCardinalityKeyValue(KeyValue.of(AI_SPAN_KEY, AI_SPAN_VALUE)).highCardinalityKeyValue(KeyValue.of(LF_SPAN_NAME_KEY, "difficulty check"))
+                .parentObservation(parentObs).start();
 
         var resourcePath = "/prompts/hyperion/checklist_difficulty.st";
         String renderedPrompt = templates.render(resourcePath, input);
@@ -131,26 +241,61 @@ public class HyperionChecklistService {
                     .responseEntity(StructuredOutputSchema.DifficultyResponse.class);
 
             var entity = response.entity();
-            if (entity == null)
-                return new DifficultyAssessmentDTO("UNKNOWN", "AI returned no response", false);
+            if (entity == null) {
+                return DifficultyAssessmentDTO.unknown("AI returned no response");
+            }
 
-            boolean matches = entity.suggested() != null && entity.suggested().equalsIgnoreCase(declaredDifficulty);
-            return new DifficultyAssessmentDTO(entity.suggested(), entity.reasoning(), matches);
+            String suggested = entity.suggested();
+            Double confidence = entity.confidence();
+            boolean matches = suggested != null && declaredDifficulty != null && suggested.equalsIgnoreCase(declaredDifficulty);
+            String delta = computeDelta(declaredDifficulty, suggested);
+
+            return new DifficultyAssessmentDTO(suggested, confidence, entity.reasoning(), matches, delta);
         }
         catch (Exception e) {
             child.error(e);
             log.warn("Failed to analyze difficulty", e);
-            return new DifficultyAssessmentDTO("UNKNOWN", "Analysis failed: " + e.getMessage(), false);
+            return DifficultyAssessmentDTO.unknown("Analysis failed: " + e.getMessage());
         }
         finally {
             child.stop();
         }
     }
 
-    private List<ConsistencyIssueDTO> runQualityAnalysis(Map<String, String> input, Observation parentObs) {
+    /**
+     * Computes the delta between declared and suggested difficulty.
+     */
+    private String computeDelta(String declared, String suggested) {
+        if (declared == null || suggested == null) {
+            return "UNKNOWN";
+        }
+
+        Map<String, Integer> levels = Map.of("EASY", 1, "MEDIUM", 2, "HARD", 3);
+        Integer declaredLevel = levels.get(declared.toUpperCase());
+        Integer suggestedLevel = levels.get(suggested.toUpperCase());
+
+        if (declaredLevel == null || suggestedLevel == null) {
+            return "UNKNOWN";
+        }
+
+        if (suggestedLevel < declaredLevel) {
+            return "LOWER";
+        }
+        else if (suggestedLevel > declaredLevel) {
+            return "HIGHER";
+        }
+        else {
+            return "MATCH";
+        }
+    }
+
+    /**
+     * Runs quality analysis.
+     */
+    private List<QualityIssueDTO> runQualityAnalysis(Map<String, String> input, Observation parentObs) {
         var child = Observation.createNotStarted("hyperion.checklist.quality", observationRegistry).contextualName("quality check")
-                .lowCardinalityKeyValue(io.micrometer.common.KeyValue.of(AI_SPAN_KEY, AI_SPAN_VALUE))
-                .highCardinalityKeyValue(io.micrometer.common.KeyValue.of(LF_SPAN_NAME_KEY, "quality check")).parentObservation(parentObs).start();
+                .lowCardinalityKeyValue(KeyValue.of(AI_SPAN_KEY, AI_SPAN_VALUE)).highCardinalityKeyValue(KeyValue.of(LF_SPAN_NAME_KEY, "quality check"))
+                .parentObservation(parentObs).start();
 
         var resourcePath = "/prompts/hyperion/checklist_quality.st";
         String renderedPrompt = templates.render(resourcePath, input);
@@ -160,10 +305,11 @@ public class HyperionChecklistService {
                     .responseEntity(StructuredOutputSchema.QualityResponse.class);
 
             var entity = response.entity();
-            if (entity == null || entity.issues() == null)
+            if (entity == null || entity.issues() == null) {
                 return List.of();
+            }
 
-            return entity.issues().stream().map(this::mapQualityIssueToDto).toList();
+            return entity.issues().stream().map(this::mapQualityIssueToDto).collect(Collectors.toList());
         }
         catch (Exception e) {
             child.error(e);
@@ -175,48 +321,36 @@ public class HyperionChecklistService {
         }
     }
 
-    private ConsistencyIssueDTO mapQualityIssueToDto(StructuredOutputSchema.QualityIssue issue) {
-        Severity severity = switch (issue.severity() == null ? "MEDIUM" : issue.severity().toUpperCase()) {
-            case "LOW", "INFO" -> Severity.LOW;
-            case "HIGH", "ERROR" -> Severity.HIGH;
-            default -> Severity.MEDIUM;
-        };
-
-        List<ArtifactLocationDTO> locations = issue.relatedLocations() == null ? List.of()
-                : issue.relatedLocations().stream()
-                        .map(loc -> new ArtifactLocationDTO(loc.type() == null ? ArtifactType.PROBLEM_STATEMENT : loc.type(), loc.filePath(), loc.startLine(), loc.endLine()))
-                        .toList();
-
-        ConsistencyIssueCategory category;
-        try {
-            category = issue.category() != null ? ConsistencyIssueCategory.valueOf(issue.category().toUpperCase()) : ConsistencyIssueCategory.CLARITY;
-        }
-        catch (IllegalArgumentException e) {
-            category = ConsistencyIssueCategory.CLARITY; // Default fallback
+    private QualityIssueDTO mapQualityIssueToDto(StructuredOutputSchema.QualityIssue issue) {
+        QualityIssueLocationDTO location = null;
+        if (issue.location() != null) {
+            location = new QualityIssueLocationDTO(issue.location().startLine(), issue.location().endLine());
         }
 
-        return new ConsistencyIssueDTO(severity, category, issue.description(), issue.suggestedFix(), locations);
+        return new QualityIssueDTO(issue.category(), issue.severity(), issue.description(), location, issue.suggestedFix(), issue.impactOnLearners());
     }
 
-    // Structured Output Schema
+    // ===== Structured Output Schemas =====
+
     private static class StructuredOutputSchema {
 
-        record LearningGoalsResponse(List<LearningGoalItem> goals) {
+        record CompetenciesResponse(List<CompetencyItem> competencies) {
         }
 
-        record LearningGoalItem(String skill, String taxonomyLevel, Double confidence, String explanation) {
+        record CompetencyItem(String knowledgeAreaShortTitle, String competencyTitle, String competencyVersion, Long catalogSourceId, String taxonomyLevel, Double confidence,
+                Integer rank, List<String> evidence, String whyThisMatches, Boolean isLikelyPrimary) {
         }
 
-        record DifficultyResponse(String suggested, String reasoning) {
+        record DifficultyResponse(String suggested, Double confidence, String reasoning) {
         }
 
         record QualityResponse(List<QualityIssue> issues) {
         }
 
-        record QualityIssue(String category, String severity, String description, String suggestedFix, List<ArtifactLocation> relatedLocations) {
+        record QualityIssue(String category, String severity, String description, LocationRef location, String suggestedFix, String impactOnLearners) {
         }
 
-        record ArtifactLocation(ArtifactType type, String filePath, Integer startLine, Integer endLine) {
+        record LocationRef(Integer startLine, Integer endLine) {
         }
     }
 }
